roomvu-deployment.yaml
# This file is created for deployment manifest roomvu-app
# The deployment manifest defines how many replicas of roomvu Laravel 10
# application should be running.
# But let us start with one replica, and if you want, just try to increase
# this number.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: roomvu-app
  labels:
    app: roomvu-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roomvu-app
  template:
    metadata:
      labels:
        app: roomvu-app
    spec:
      containers:
      - name: roomvu-app
        image: localhost:5000/roomvu-app:latest
        ports:
        - containerPort: 80
---
# Services manifest are used with [ load balancing, Port Mapping, External Access ]

apiVersion: v1
kind: Service
metadata:
  name: roomvu-app
  labels:
    app: roomvu-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: roomvu-app
---
# The ingress manifest is define to expose your Laravel 10 application to external clients.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roomvu-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: roomvu-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: roomvu-app
            port:
              name: http
